WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119916
AX: WebKit is not exposing AXLanguage correctly
https://bugs.webkit.org/show_bug.cgi?id=119916
Summary
AX: WebKit is not exposing AXLanguage correctly
James Craig
Reported
2013-08-16 16:36:01 PDT
WebKit is not exposing AXLanguage for examples in this page.
http://www.w3.org/2013/08/lang.html
Attachments
patch
(37.49 KB, patch)
2013-08-19 10:06 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-16 16:36:38 PDT
<
rdar://problem/14762675
>
chris fleizach
Comment 2
2013-08-19 10:06:45 PDT
Created
attachment 209097
[details]
patch
Darin Adler
Comment 3
2013-08-19 10:24:12 PDT
Comment on
attachment 209097
[details]
patch As you are an expert on the Cocoa accessibility interface, I’ll accept your implicit assertion here that AXLanguage with a value of empty string is a helpful result on these tests.
chris fleizach
Comment 4
2013-08-19 10:26:17 PDT
(In reply to
comment #3
)
> (From update of
attachment 209097
[details]
) > As you are an expert on the Cocoa accessibility interface, I’ll accept your implicit assertion here that AXLanguage with a value of empty string is a helpful result on these tests.
Yes this is what we want outputted here. We have tests that already specifically check for the value of this attribute. This patch just makes it so that the attribute shows up with the list of attributes are queried. It's mostly to aid usage of the AX inspector, and does not impact VoiceOver
chris fleizach
Comment 5
2013-08-19 10:32:02 PDT
http://trac.webkit.org/changeset/154283
Jer Noble
Comment 6
2013-08-19 12:53:59 PDT
This commit caused test failures (in accessibility/lists.h) on numerous Mac bots:
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r154286%20(9534)/results.html
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r154286%20(11777)/results.html
http://build.webkit.org/results/Apple%20Lion%20Debug%20WK1%20(Tests)/r154285%20(10217)/results.html
http://build.webkit.org/results/Apple%20Lion%20Debug%20WK2%20(Tests)/r154286%20(10865)/results.html
Jer Noble
Comment 7
2013-08-19 13:24:03 PDT
Rebaselined platform/mac/accessibility/lists-expected.txt in <
https://trac.webkit.org/r154292
>.
chris fleizach
Comment 8
2013-08-19 13:24:57 PDT
(In reply to
comment #7
)
> Rebaselined platform/mac/accessibility/lists-expected.txt in <
https://trac.webkit.org/r154292
>.
Thanks Jer. I was running on 10.9 and missed this switch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug